--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
+    "react-spinners": "^0.17.0",
+    "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
